fix: add z-index for loading-screen

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: #020C1B;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
